# celeste-document-intelligence

./: .gitignore  CLAUDE.md  README.md  example.py  pyproject.toml
src/celeste_document_intelligence/: __init__.py  base.py  mapping.py
src/celeste_document_intelligence/core/: __init__.py  config.py  enums.py  types.py
src/celeste_document_intelligence/providers/: google.py
