[project]
name = "celeste-document-intelligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "google-genai>=0.1.0",
    "streamlit>=1.46.1",
    "notebook>=7.4.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true