[project]
name = "celeste-document-intelligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "pydantic>=2.11.7",
    "google-genai>=0.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "streamlit>=1.46.1",
    "notebook>=7.4.4",
]

[tool.uv.sources]
celeste-core = { workspace = true }